--- a/Prototype 1/views/partials/navbar.ejs
+++ b/Prototype 1/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
         </a>
     
         <div class="indexHeaderSection">
-            <button class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Nous contacter</button>
+            <a href="/faq" class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">F.A.Q</a>
             <a href="/Abonnement" class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">Abonnements</a>
         </div>
     </div>
