--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -101,6 +101,10 @@
     z-index: 1;
 }
 
+.unclickable {
+    pointer-events: none;
+    opacity: 0.6;
+}
 
 @media screen and (max-width: 768px) {
     .exercice-card {
