--- a/Prototype 1/views/Pages/resetMdp.ejs
+++ b/Prototype 1/views/Pages/resetMdp.ejs
@@ -4,14 +4,12 @@
 
 <!--Source : https://bootstrapbrain.com/component/bootstrap-free-forgot-password-form-template/#preview-->
 <section class="bg-light p-3 p-md-4 p-xl-5">
-  <div class="container" style="background-color: gold;">
+  <div class="container" style="background-color: #D5C069 !important; align-items: center;">
     <div class="row justify-content-center">
       <div class="col-12 col-xxl-11">
         <div class="card border-light-subtle shadow-sm">
           <div class="row g-0">
-            <div class="col-12 col-md-6">
-              <img src="/imgs/whiteTransp.png" style="width: 185px" alt="Fitness logo">            
-            </div>
+          
             <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
               <div class="col-12 col-lg-11 col-xl-10">
                 <div class="card-body p-3 p-md-4 p-xl-5">
@@ -58,3 +56,5 @@
     </div>
   </div>
 </section>
+
+
