--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -5,27 +5,25 @@
 
 
     <div class="side-bar">
-        <a id="calendarIcon">
-            <i class="fa-solid fa-calendar-days icons" style="color: #000000;" name="calendarIcon"></i>
+        <a id="calendarIcon" class="sidebar-link">
+            <i class="fa-solid fa-calendar-days icons" name="calendarIcon"></i>
             <span>Historique</span>
         </a>
-
-        <a id="profileIcon">
-            <i class="fa-solid fa-user icons" style="color: #000000;" name="profileIcon"></i>
+    
+        <a id="profileIcon" class="sidebar-link">
+            <i class="fa-solid fa-user icons" name="profileIcon"></i>
             <span>Profile</span>
         </a>
-
-        <a id="plusIcon">
-            <i class="fa-sharp fa-solid fa-plus icons" style="color: #000000;" name="plusIcon"></i>
+    
+        <a id="plusIcon" class="sidebar-link">
+            <i class="fa-sharp fa-solid fa-plus icons" name="plusIcon"></i>
             <span>Entrainements</span>
         </a>
-
-        <a href="/" id="exitIcon">
-            <i class="fa-solid fa-right-from-bracket icons" style="color: #000000;" name="exitIcon"></i>
+    
+        <a href="/" id="exitIcon" class="sidebar-link">
+            <i class="fa-solid fa-right-from-bracket icons" name="exitIcon"></i>
             <span>Acceuil</span>
         </a>
-
-
     </div>
     <div class="profile-page hidden">
         <style>
