--- a/Prototype 1/views/Pages/abonnement.ejs
+++ b/Prototype 1/views/Pages/abonnement.ejs
@@ -25,6 +25,19 @@
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 1s ease-in-out;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* Ajoute cet attribut pour aligner les éléments en bas */
+            position: relative; /* Ajout pour positionner le prix en bas */
+        }
+
+        .price {
+            position: absolute;
+            bottom: 70px; /* Ajustez cette valeur en fonction de l'espacement souhaité */
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            text-align: center;
         }
 
         @keyframes slideOutLeft {
@@ -57,6 +70,8 @@
         .hidden {
             display: none;
         }
+
+        
     </style>
 </head>
 <body>
@@ -65,10 +80,10 @@
         <div class="card" id="card1">
             <h2>GRATUIT</h2>
             <div class="additional-info">
-                <p>Accès limité aux programmes</p>
-                <p>3 essais pour générer des programmes</p>
-                <p><strong>Prix: Gratuit</strong></p>
+                <p><strong>Accès limité aux programmes</strong></p>
+                <p><strong>3 essais pour générer des programmes</strong></p>
             </div>
+            <p class="price"><strong>Prix: Gratuit</strong></p>
             <% if (user) { %>
                 <button type="button" onclick="showPaymentForm('1')" id="but1" <% if (user.idAbonnement === 1) { %>disabled<% } %>>Confirmer</button>
             <% } else { %>
@@ -80,10 +95,10 @@
         <div class="card" id="card2">
             <h2>BASIC</h2>
             <div class="additional-info">
-                <p>Accès illimité aux programmes</p>
-                <p>10 essais par mois pour générer des programmes</p>
-                <p><strong>Prix: 6,99$/mois</strong></p>
+                <p><strong>Accès illimité aux programmes</strong></p>
+                <p><strong>10 essais par mois pour générer des programmes</strong></p>
             </div>
+            <p class="price"><strong>Prix: 6,99$/mois</strong></p>
             <% if (user) { %>
                 <button type="button" onclick="showPaymentForm('2')" id="but2" <% if (user.idAbonnement === 2) { %>disabled<% } %>>Confirmer</button>
             <% } else { %>
@@ -95,11 +110,11 @@
         <div class="card" id="card3">
             <h2>PREMIUM</h2>
             <div class="additional-info">
-                <p>Accès au coach</p>
-                <p>Accès illimité pour générer des programmes</p>
-                <p>Accès aux plans de nutrition</p>
-                <p><strong>Prix: 9,99$/mois</strong></p>
+                <p><strong>Accès au coach ( En developpement )</strong></p>
+                <p><strong>Accès illimité pour générer des programmes</strong></p>
+                <p><strong>Accès aux plans de nutrition ( En developpement )</strong></p>
             </div>
+            <p class="price"><strong>Prix: 9,99$/mois</strong></p>
             <% if (user) { %>
                 <button type="button" onclick="showPaymentForm('3')" id="but3" <% if (user.idAbonnement === 3) { %>disabled<% } %>>Confirmer</button>
             <% } else { %>
@@ -111,7 +126,7 @@
     <video autoplay muted loop class="background-video">
         <source src="imgs/SONY FX3 CINEMATIC  SIGMA 24-70 F2.8 - Trim.mp4" type="video/mp4">
         Votre navigateur ne supporte pas la balise vidéo.
-      </video>
+    </video>
 
     <script>
         function redirectToLogin() {
@@ -148,19 +163,17 @@
                 
                 cardContainer.style.animation = 'slideOutLeft 1s forwards';
 
-
                 setTimeout(() => {
                     paypalButtonContainer.style.display = 'block';
                     paypalButtonContainer.style.animation = 'slideInRight 1s forwards';
                 }, 1000);
-
 
                 paypal.Buttons({
                     createOrder: function(data, actions) {
                         return actions.order.create({
                             purchase_units: [{
                                 amount: {
-                                    value: planId === '3' ? '9.99' : '6.99' 
+                                    value: planId === '3' ? '9.99' : '6.99'
                                 },
                                 description: 'Abonnement ' + (planId === '2' ? 'Basic' : 'Premium')
                             }]
