--- a/Prototype 1/views/Pages/abonnement.ejs
+++ b/Prototype 1/views/Pages/abonnement.ejs
@@ -20,6 +20,7 @@
 
         .card {
             width: 500px;
+            height: 500px;
             border: 1px solid #ccc;
             padding: 16px;
             text-align: center;
