--- a/Prototype 1/views/Pages/creationMdp.ejs
+++ b/Prototype 1/views/Pages/creationMdp.ejs
@@ -1,13 +1,39 @@
-<%- include ("../partials/head.ejs") %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gym Website</title>
+    <link rel="stylesheet" href="/resetpass.css">
+
+    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="/googleStyle.css">
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/df1a2f4d51.js" crossorigin="anonymous"></script>
+    
+</head>
+<body>
+    
+</body>
+</html>
 
 <style>
     body{
         background-color: white;
+        width: 100%;
     }
     .container {
         margin-top: 50px;
         background-color: white;
-        
+        width: 100%;
     }
     .form-group {
         position: relative;
@@ -39,29 +65,33 @@
     .btn-reset:hover {
         background-color: #D5C069;
     }
+    form{
+        width: 100%;
+        border: 1px solid black;
+    }
 </style>
 
  <center>
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
-                <form action="/reset-new-mdp/<%= token %>" method="POST">
+                <form id="resetForm" action="/reset-new-mdp/<%= token %>" method="POST">
                     <div class="form-group pass_show">
-                        <label for="currentPassword">Current Password</label>
-                        <input type="password" name="currentPassword" class="form-control" placeholder="Mot de passe actuel">
+                        <label for="currentPassword">Mot de passe actuel</label>
+                        <input type="password" id="currentPassword" name="currentPassword" class="form-control" placeholder="Mot de passe actuel">
                     </div>
                     <div class="form-group pass_show">
-                        <label for="newPassword">New Password</label>
-                        <input type="password" name="newPassword" class="form-control" placeholder="Nouveau mot de passe">
+                        <label for="newPassword">Nouveau mot de passe</label>
+                        <input type="password" id="newPassword" name="newPassword" class="form-control" placeholder="Nouveau mot de passe">
                     </div>
                     <div class="form-group pass_show">
-                        <label for="confirmPassword">Confirm Password</label>
-                        <input type="password" name="confirmPassword" class="form-control" placeholder="Re-nouveau mot de passe">
+                        <label for="confirmPassword">Confirmer le mot de passe</label>
+                        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Re-nouveau mot de passe">
                     </div>
                     <br>
-                    <button type="submit" class="btn-reset">Réinitialiser le mot de passe</button>
+                    <button type="submit" class="btn-reset" id="submit-btn">Réinitialiser le mot de passe</button>
                 </form>
-            </div>
+                <div id="alerteErreur" style="display: none;" class="alert alert-danger" role="alert"></div>
+            
         </div>
     </div>
  </center>
@@ -76,5 +106,47 @@
         $(this).prev().attr('type', function (index, attr) {
             return attr == 'password' ? 'text' : 'password';
         });
-    });  
+    });
+
+    // function canSubmitForm()
+    // {
+    //     let currentPassword = document.getElementById("currentPassword");
+    //     let newPassword = document.getElementById("newPassword");
+    //     let confirmPassword = document.getElementById("confirmPassword");
+    //     if (currentPassword.value === "" || newPassword.value === "" || confirmPassword.value === "") {
+    //         return false;
+    //     } 
+    //     return true;
+    // }
+    document.getElementById('resetForm').addEventListener("submit", (e) => {
+        e.preventDefault();
+        let token = window.location.href.split("/")[4];
+        fetch(`/reset-new-mdp/${token}`, {
+            method: 'POST',
+            headers: {
+            // Indique au serveur que les données envoyées sont au format JSON
+            'Content-Type': 'application/json', 
+            },
+            // Convertit les données du formulaire en chaîne JSON. 
+            body: JSON.stringify({ currentPassword: currentPassword.value, newPassword: newPassword.value, confirmPassword: confirmPassword.value}) 
+        })
+        .then(response => response.json()) 
+        .then(data => {
+            if (data.success) {
+                // Si la connexion est réussie, redirige l'utilisateur vers la page d'accueil.
+                window.location.href = '/Connexion'; 
+                alert('Réinitialisation du mot de passe réussie');
+            
+            } else {
+            let alerteErreur = document.getElementById('alerteErreur');
+            alerteErreur.style.display = 'block';
+            // Affiche le message d'erreur envoyé par le serveur.
+            alerteErreur.textContent = data.message; 
+            }
+        })
+        .catch((error) => {
+            // Affiche l'erreur dans la console si la requête échoue.
+            console.error('Error:', error); 
+        });
+    });
 </script>
