--- a/Prototype 1/views/Pages/resetMdp.ejs
+++ b/Prototype 1/views/Pages/resetMdp.ejs
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include ('../partials/head') %>
+<head>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gym Website</title>
+    <link rel="stylesheet" href="/resetpass.css">
 
-<!--Source : https://bootstrapbrain.com/component/bootstrap-free-forgot-password-form-template/#preview-->
+    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="/googleStyle.css">
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/df1a2f4d51.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <!--Source : https://bootstrapbrain.com/component/bootstrap-free-forgot-password-form-template/#preview-->
 <section class="bg-light p-3 p-md-4 p-xl-5">
   <div class="container" style="background-color: #D5C069 !important; align-items: center;">
     <div class="row justify-content-center">
@@ -56,5 +74,11 @@
     </div>
   </div>
 </section>
+
+
+</body>
+</html>
+
+
 
 
